--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/interaction-particles-collisions": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
+    "three": "^0.171.0",
+    "tsparticles": "^3.7.1",
+    "vanta": "github:tengbao/vanta",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
